--- a/package.json
+++ b/package.json
@@ -25,8 +25,9 @@
   },
   "dependencies": {
     "@google/model-viewer": "3.1.1",
-    "three": "0.151.2",
+    "@websitebeaver/vue-magnifier": "^1.1.0",
     "pinia": "^2.1.3",
+    "three": "0.151.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
@@ -40,11 +41,15 @@
     "@vue/eslint-config-typescript": "^11.0.3",
     "@vue/test-utils": "^2.3.2",
     "@vue/tsconfig": "^0.4.0",
+    "autoprefixer": "^10.4.19",
+    "daisyui": "^4.7.3",
     "eslint": "^8.39.0",
     "eslint-plugin-vue": "^9.11.0",
     "jsdom": "^22.1.0",
     "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.38",
     "prettier": "^2.8.8",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.0.4",
     "vite": "^4.3.9",
     "vitest": "^0.32.0",
